# SmartGrid

./: .gitignore  CMakeLists.txt
smartgrid/: __init__.py  axis_mapping.py  feature_selection.py  grid_builder.py  model.py  predictor.py
smartgrid/hot_math/: bindings.cpp
smartgrid/hot_math/header/: smartgrid_predictor.h
smartgrid/hot_math/src/: smartgrid_predictor.cpp
